# aprilTags

./: CMakeLists.txt  README.md  TrackerClient_ap.cpp  apriltag-qt.files  apriltag-qt.includes
.svn/: wc.db
AprilTags/: TagDetection.h
example/: apriltags_demo.cpp
pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
pod-build/example/: Makefile  cmake_install.cmake
pod-build/lib/pkgconfig/: apriltags.pc
src/: TagDetection.cc  TagFamily.cc  apid2T.txt
